Add new responsive style

--- a/templates/default.html
+++ b/templates/default.html
@@ -4,6 +4,7 @@
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Style-Type" content="text/css" />
   <meta name="generator" content="pandoc" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
 $for(author-meta)$
   <meta name="author" content="$author-meta$" />
 $endfor$
@@ -34,15 +35,18 @@ $for(header-includes)$
 $endfor$
 </head>
 <body>
+<nav>
+<div class="menuitem"><a href="index.html">Home</a></div>
+<div class="menuitem"><a href="vhdl_cheatsheet.pdf">VHDL reference (PDF)</a></div>
+<div class="menuitem"><a href="es4-syllabus-sp21.pdf">Syllabus (PDF)</a></div>
+</nav>
+
 <div id="container">
 $for(include-before)$
 $include-before$
 $endfor$
 
 <div id="header">
-</div>
-
-<div id="nav">
 </div>
 
 <div id="content">
