--- a/resources/style.css
+++ b/resources/style.css
@@ -1,33 +1,53 @@
-
 body {
-	background: white;
-	font-family: Georgia, serif;
-	padding-bottom: 8px;
+  background: white;
+  font-family: Georgia, serif;
+  padding-bottom: 10px;
 }
 
 h1, h2, h3 {
-	color: #527bbd;
-	margin-top: 0.7em;
-	margin-bottom: 0.3em;
-	padding-bottom: 0.2em;
-	line-height: 1.0;
-	padding-top: 0.5em;
-	border-bottom: 1px solid #aaaaaa;
+  color: #527bbd;
+  margin-top: 0.7em;
+  margin-bottom: 0.3em;
+  padding-bottom: 0.2em;
+  line-height: 1.0;
+  padding-top: 0.2em;
+  border-bottom: 1px solid #aaaaaa;
 }
 
 
 a {
-	color: #224b8d;
-	text-decoration: none;
+  color: #224b8d;
+  text-decoration: none;
 }
 
 a:hover {
-	border-bottom: 1px gray dotted;
+  border-bottom: 1px gray dotted;
 }
 
+nav {
+  position: sticky;
+  float: left;
+  top: 10px;
+  margin-top:80px;
+  margin-right: 25px;
+
+  border-right: 1px solid #b0b0b0;
+  padding: 10px;
+}
+
+@media all and (max-width: 699px) {
+  nav{
+    position: unset;
+    float: none;
+    margin: 10px;
+    border: none;
+  }
+}
+
+
 #container {
+  display: flex;
+  padding-right: 10px;
   max-width: 800px;
-  margin-left: auto;
-  margin-right: auto;
 }
 
