--- a/templates/default.html
+++ b/templates/default.html
@@ -37,8 +37,12 @@ $endfor$
 <body>
 <nav>
 <div class="menuitem"><a href="index.html">Home</a></div>
+<div class="menuitem"><a href="about.html">About ES 4</a></div>
 <div class="menuitem"><a href="vhdl_cheatsheet.pdf">VHDL reference (PDF)</a></div>
-<div class="menuitem"><a href="es4-syllabus-sp21.pdf">Syllabus (PDF)</a></div>
+<div class="menuitem"><a href="es4-learningguide-sp21.pdf">Learning guide (PDF)</a></div>
+<div class="menuitem"><a href="project.html">Final project</a></div>
+<div class="menuitem"><a href="cpu.html">CPU project</a></div>
+<div class="menuitem"><a href="past_projects.html">Past projects</a></div>
 </nav>
 
 <div id="container">
